--- a/cart.css
+++ b/cart.css
@@ -20,3 +20,55 @@
     text-decoration: none;
     color: #000;
 }
+
+.delbtn {
+    width: 10em;
+    position: relative;
+    height: 2.5em;
+    border: 3px ridge #ff6060;
+    outline: none;
+    background-color: transparent;
+    color: black;
+    transition: 1s;
+    border-radius: 0.3em;
+    font-size: 16px;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+.delbtn::after {
+    content: "";
+    position: absolute;
+    top: -7px;
+    left: 3%;
+    width: 95%;
+    height: 36%;
+    background-color: white;
+    transition: 0.5s;
+    transform-origin: center;
+}
+
+.delbtn::before {
+    content: "";
+    transform-origin: center;
+    position: absolute;
+    top: 80%;
+    left: 3%;
+    width: 95%;
+    height: 40%;
+    background-color: white;
+    transition: 0.5s;
+}
+
+.delbtn:hover::before, .delbtn:hover::after {
+    width: 0;
+    left:50%;
+}
+
+.delbtn:hover {
+    box-shadow: inset 0px 0px 25px #a5ffa4;
+}
+
+.delbtn:hover {
+    box-shadow: inset 0px 0px 25px #fabbbb;
+}
