--- a/wish.css
+++ b/wish.css
@@ -15,6 +15,11 @@ th, td {
 th {
     background-color: #ddd;
 }
+
+.btn_td{
+    text-align: center;
+}
+
 .cartbtn {
     width: 10em;
     position: relative;
