--- a/product.css
+++ b/product.css
@@ -48,6 +48,7 @@
     font-size: 16px;
     font-weight: bold;
     cursor: pointer;
+    margin: 6px;
 }
 
 .wishbtn {
@@ -63,6 +64,7 @@
     font-size: 16px;
     font-weight: bold;
     cursor: pointer;
+    margin: 6px;
 }
 
 .cartbtn::after, .wishbtn::after {
