--- a/wish.css
+++ b/wish.css
@@ -33,6 +33,7 @@ th {
     font-size: 16px;
     font-weight: bold;
     cursor: pointer;
+    padding: 3px;
 }
 
 .wishbtn {
@@ -48,6 +49,7 @@ th {
     font-size: 16px;
     font-weight: bold;
     cursor: pointer;
+    padding: 3px;
 }
 
 .cartbtn::after, .wishbtn::after {
