--- a/home.css
+++ b/home.css
@@ -186,6 +186,194 @@
 	margin-top: 12px;
 }
 
+/* Product Container */
+.product-container {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-gap: 10px;
+    margin: 20px;
+}
+
+.product-container a{
+    border: none;
+    color: rgb(0, 0, 0);
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    padding: 20px;
+    border-radius: 20px;
+}
+
+  /* Individual Product */
+.product-card {
+    border: 3px solid #FFB53F;
+    border-radius: 23px;
+    text-align: center;
+}
+
+.product-card img {
+    max-width: 100%;
+    height: 200px;
+    object-fit: contain;
+    margin-bottom: 10px;
+}
+
+.product-card h3 {
+    font-size: 18px;
+    margin-bottom: 5px;
+}
+
+.product-card p {
+    font-size: 16px;
+    margin-bottom: 10px;
+}
+
+.product-card .price {
+    font-size: 20px;
+    font-weight: bold;
+    color: #333;
+}
+
+.product-card:hover{
+    background-color: #e6f7ff;
+    transition: 0.3S ease;
+}
+
+.main{
+    margin: 20px;
+}
+
+/* banner */
+.main-banner .container-fluid {
+	padding: 0px 10px;
+	margin-bottom: -24px;
+}
+
+.owl-banner .item {
+	position: relative;
+    display: inline-block;
+    margin-right: 10px; /* add spacing between items */
+}
+
+.owl-banner .item .item-content {
+	position: absolute;
+	bottom: 40px;
+	left: 40px;
+}
+
+.owl-banner .item .item-content .meta-category span {
+	color: #f48840;
+	font-size: 18px;
+	text-transform: uppercase;
+	font-weight: 900;
+	letter-spacing: 0.25px;
+}
+
+.owl-banner .item .item-content h4 {
+	font-size: 24px;
+	font-weight: 900;
+	color: #fff;
+	letter-spacing: 0.5px;
+	text-transform: capitalize;
+	margin: 10px 0px 12px 0px;
+}
+
+.owl-banner .item .item-content ul li {
+	display: inline-block;
+	margin-right: 8px;
+}
+
+.owl-banner .item .item-content ul li:after {
+	content: '|';
+	color: #fff;
+	margin-left: 8px;
+}
+.owl-banner .item .item-content {
+	color: #fff;
+}
+
+.owl-banner .item .item-content ul li:last-child::after {
+	display: none;
+}
+
+.owl-banner .item .item-content ul li a {
+	font-size: 14px;
+	color: #fff;
+	font-weight: 500;
+	transition: all .3s;
+}
+
+.owl-banner .item .item-content ul li a:hover {
+	color: #f48840;
+}
+
+.owl-banner .owl-nav {
+	position: absolute;
+	top: 50%;
+	width: 100%;
+}
+
+.owl-banner .owl-nav .owl-prev {
+	position: absolute;
+	left: 40px;
+}
+
+.owl-banner .owl-nav .owl-next {
+	position: absolute;
+	right: 40px;
+}
+
+.owl-banner .owl-nav button {
+	outline: none;
+}
+
+.owl-banner .owl-nav button span {
+	color: #fff;
+	font-size: 36px;
+	width: 60px;
+	height: 60px;
+	display: inline-block;
+	text-align: center;
+	line-height: 60px;
+	background-color: rgba(250,250,250,0.3);
+}
+
+/* Call To Action */
+
+.call-to-action {
+	margin-top: 100px;
+}
+
+.call-to-action .main-content {
+	padding: 40px;
+	background-image: url(../images/cta-bg.jpg);
+	background-position: center center;
+	background-repeat: no-repeat;
+	background-size: cover;
+}
+
+.call-to-action .main-content span {
+	color: #f48840;
+	font-size: 18px;
+	font-weight: 900;
+	letter-spacing: 0.5px;
+}
+
+.call-to-action .main-content h4 {
+	margin-bottom: 0px;
+	margin-top: 12px;
+	color: #fff;
+	font-size: 26px;
+	font-weight: 900;
+	letter-spacing: 0.25px;
+}
+
+.call-to-action .main-content .main-button {
+	text-align: right;
+	margin-top: 12px;
+}
+
 /* Responsive Style */
 @media (max-width: 1250px) {
 	.owl-banner .owl-nav .owl-prev {
@@ -230,4 +418,5 @@
 		margin-top: 30px;
 	}
 }
+
 
